--- a/scappshortcuts/Makefile
+++ b/scappshortcuts/Makefile
@@ -1,3 +1,6 @@
+export ARCHS = armv7 arm64
+export TARGET = iphone:clang:8.1:latest
+
 include $(THEOS)/makefiles/common.mk
 
 BUNDLE_NAME = SCAppShortcuts
@@ -5,6 +8,7 @@ SCAppShortcuts_FILES = SCARootListController.m
 SCAppShortcuts_INSTALL_PATH = /Library/PreferenceBundles
 SCAppShortcuts_FRAMEWORKS = UIKit MessageUI
 SCAppShortcuts_PRIVATE_FRAMEWORKS = Preferences
+SCAppShortcuts_LIBRARIES = applist
 
 include $(THEOS_MAKE_PATH)/bundle.mk
 
