--- a/scappshortcuts/Resources/Root.plist
+++ b/scappshortcuts/Resources/Root.plist
@@ -16,6 +16,16 @@
 		</dict>
 		<dict>
 			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>label</key>
+			<string>Portrait Applications</string>
+			<key>detail</key>
+			<string>SCAPortraitAppsListController</string>
+			<key>isController</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>cell</key>
 			<string>PSLinkListCell</string>
 			<key>key</key>
 			<string>portraitPerPage</string>
@@ -56,6 +66,16 @@
 			<string>com.dgh0st.scappshortcuts</string>
 			<key>PostNotification</key>
 			<string>com.dgh0st.scappshortcuts/settingschanged</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>label</key>
+			<string>Landscape Applications</string>
+			<key>detail</key>
+			<string>SCALandscapeAppsListController</string>
+			<key>isController</key>
+			<true/>
 		</dict>
 		<dict>
 			<key>cell</key>
